--- a/calculator.css
+++ b/calculator.css
@@ -18,7 +18,7 @@
 
 }
 
-button {
+input {
 
     position: absolute;
 
@@ -33,48 +33,83 @@ button {
     font-size: 21px;
 
 }
-button:hover {
 
+input:hover {
     border: 1px solid #888c90;
-
 }
-button#id0{
+input#id0{
     margin-top: 486px;
     margin-left: 236px;
 }
-button#id1{
+input#id1{
     margin-top: 395px;
     margin-left: 78px;
 }
-button#id2{
+input#id2{
     margin-top: 395px;
     margin-left: 236px;
 }
-button#id3{
+input#id3{
     margin-top: 395px;
     margin-left: 394px;
 }
-button#id4{
+input#id4{
     margin-top: 304px;
     margin-left: 78px;
 }
-button#id5{
+input#id5{
      margin-top: 304px;
      margin-left: 236px;
  }
-button#id6{
+input#id6{
     margin-top: 304px;
     margin-left: 394px;
 }
-button#id7{
+input#id7{
     margin-top: 214px;
     margin-left: 78px;
 }
-button#id8{
+input#id8{
      margin-top: 214px;
      margin-left: 236px;
  }
-button#id9{
+input#id9{
     margin-top: 214px;
     margin-left: 394px;
+}
+input#idx3 {
+    margin-top: 395px;
+    margin-left: -80px;
+}
+input#idx2 {
+    margin-top: 304px;
+    margin-left: -80px;
+}
+input#idX {
+    margin-top: 214px;
+    margin-left: 551px;
+}
+input#idShare {
+    margin-top: 125px;
+    margin-left: 551px;
+}
+input#idResult {
+    margin-top: 486px;
+    margin-left: 551px;
+}
+input#idPlus {
+    margin-top: 395px;
+    margin-left: 551px;
+}
+input#idMinus {
+    margin-top: 304px;
+    margin-left: 551px;
+}
+
+
+div#result {
+    position: absolute;
+    font-size: 42px;
+    margin-top: 100px;
+    margin-left: 950px;
 }
